# LearningOpenGL

./: CMakeLists.txt  README.md  Shader.cpp  stb_image.cpp
Chapter1/: main.cpp
Chapter1/1.2 Triangle_Indices/: 1.2_Triangle_Indices.cpp
Chapter1/2.1 Shaders/: 2.1_Shaders.cpp  2.2_Shaders.cpp
Chapter1/2.1 Shaders/Exercises/: 2.2_Shaders.cpp
Chapter1/3.1 Textures/: 3.1_Textures.cpp  3.2_Textures.cpp
Chapter1/3.1 Textures/Exercises/: 3.2_Textures.cpp
Headers/: Shader.h  filesystem.h  root_directory.h
Shaders/Chapter1/: fragment.glsl  vertex.glsl
Shaders/Chapter1/2.1 Shaders/: fragment.glsl
Shaders/Chapter1/2.1 Shaders/Exercises/: fragment.glsl  vertex.glsl
Shaders/Chapter1/3.1 Textures/Exercises/3.2.1_flip/: 3.2.1_fragment.glsl  ReadMe.md
ShadersDir/: vertex.glsl
includes/GLAD/include/glad/: glad.h
includes/GLAD/src/: glad.c
includes/GLM/lib/pkgconfig/: glm.pc
